// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntriesTable should delete entry 1`] = `
<DocumentFragment>
  <div>
    <table
      class="table-wrapper"
    >
      <thead>
        <tr>
          <th>
            Actions
          </th>
          <th>
            Date
          </th>
          <th>
            Service
          </th>
          <th>
            Person
          </th>
          <th>
            Note
          </th>
          <th>
            Time
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-testid="row-delete-14541903"
        >
          <td>
            <button
              type="button"
            >
              delete
            </button>
          </td>
          <td>
            2022-05-21
          </td>
          <td>
            Design
          </td>
          <td>
            Marina  Savic
          </td>
          <td>
            <ul>
              <li>
                2
              </li>
            </ul>
          </td>
          <td>
            60
          </td>
        </tr>
      </tbody>
    </table>
    <button
      type="button"
    >
      Prev
    </button>
    <button
      type="button"
    >
      next
    </button>
  </div>
</DocumentFragment>
`;

exports[`EntriesTable should render component and match snapshot 1`] = `
<DocumentFragment>
  <div>
    <table
      class="table-wrapper"
    >
      <thead>
        <tr>
          <th>
            Actions
          </th>
          <th>
            Date
          </th>
          <th>
            Service
          </th>
          <th>
            Person
          </th>
          <th>
            Note
          </th>
          <th>
            Time
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-testid="row-delete-14541918"
        >
          <td>
            <button
              type="button"
            >
              delete
            </button>
          </td>
          <td>
            2022-05-21
          </td>
          <td>
            App design
          </td>
          <td>
            Marina  Savic
          </td>
          <td>
            <ul>
              <li>
                foo bar
              </li>
            </ul>
          </td>
          <td>
            100
          </td>
        </tr>
        <tr
          data-testid="row-delete-14541903"
        >
          <td>
            <button
              type="button"
            >
              delete
            </button>
          </td>
          <td>
            2022-05-21
          </td>
          <td>
            Design
          </td>
          <td>
            Marina  Savic
          </td>
          <td>
            <ul>
              <li>
                2
              </li>
            </ul>
          </td>
          <td>
            60
          </td>
        </tr>
      </tbody>
    </table>
    <button
      type="button"
    >
      Prev
    </button>
    <button
      type="button"
    >
      next
    </button>
  </div>
</DocumentFragment>
`;
